--- a/adminWork/orders.html
+++ b/adminWork/orders.html
@@ -55,7 +55,7 @@
         <a href="uploadzip.html">    
         <li class="list-group-item">Upload zip</li>
             </a>
-        <a href="#">
+        <a href="uploaddata">
         <li class="list-group-item">Upload data</li>
         </a>
         </ul>
