--- a/adminWork/uploaddata.html
+++ b/adminWork/uploaddata.html
@@ -6,8 +6,11 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">    
 <link href="static/bootstrap.min.css" rel="stylesheet" type="text/css">
 <link href="static/style.css" rel="stylesheet" type="text/css">
+<link href="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/1.1.3/sweetalert.css" rel="stylesheet" type="text/css">
 <script src="js/jquery-3.1.0.min.js"></script>
 <script src="js/bootstrap.min.js"></script>  
+<script src="js/admin.js"></script> 
+<script src="js/sweetalert.min.js"></script> 
     
     
 </head>
