--- a/adminWork/uploadzip.html
+++ b/adminWork/uploadzip.html
@@ -58,7 +58,7 @@
         <a href="uploadzip.html">    
         <li class="list-group-item">Upload zip</li>
             </a>
-        <a href="#">
+        <a href="uploaddata.html">
         <li class="list-group-item">Upload data</li>
         </a>
         </ul>
